[package]
name = "timecrag"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[dependencies.nrf52832-hal]
version = "0.18.0"
default-features = false
features = ["rt", "embedded-hal-02", "xxAA-package"]
