[package]
name = "timecrag"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers", "nightly"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0", features = ["nrf52832", "time", "defmt", "time-driver-rtc1", "nfc-pins-as-gpio"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
